[package]
name = "heating"
version = "0.3.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2024"
publish = false

[profile.release]
opt-level = 3
lto = true

[dependencies]
env_logger = "0.11"
log = "0.4"
vcontrol = { version = "0.6.0" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"]}
esphome-native-api = "2"
mac_address = "1.1.8"
phf = "0.13"
itertools = "0.14.0"
rangemap = "1.7.0"

[patch.crates-io]
# vcontrol = { git = "https://github.com/reitermarkus/vcontrol-rs" }
# vcontrol = { path = "../vcontrol-rs" }
# esphome-native-api = { git = "https://github.com/reitermarkus/esphome-native-api" }
# esphome-native-api = { path = "../esphome-native-api" }
